metadata/root/main/default/objects/Lead/fields/Assetphone__c.field-meta.xml
<CustomField>
    <fullName>Assetphone__c</fullName>
    <label>Assetphone</label>
    <type>Phone</type>
</CustomField>