metadata/root/main/default/objects/Lead/fields/Test_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Test_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test_checkbox</label>
    <type>Checkbox</type>
</CustomField>