metadata/root/main/default/objects/Lead/fields/Test_currency__c.field-meta.xml
<CustomField>
    <fullName>Test_currency__c</fullName>
    <label>Test_currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>