metadata/root/main/default/objects/Lead/fields/Test_dateFields__c.field-meta.xml
<CustomField>
    <fullName>Test_dateFields__c</fullName>
    <label>Test_dateFields</label>
    <type>Date</type>
</CustomField>