metadata/root/main/default/objects/Lead/fields/Test_datetimefields__c.field-meta.xml
<CustomField>
    <fullName>Test_datetimefields__c</fullName>
    <label>Test_datetimefields</label>
    <type>DateTime</type>
</CustomField>