metadata/root/main/default/objects/Lead/validationRules/LeadValidationrule.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadValidationrule</fullName>
    <active>true</active>
    <errorConditionFormula>FirstName = &apos;New&apos;</errorConditionFormula>
    <errorMessage>Test</errorMessage>
</ValidationRule>